# msc-mcp

./: AGENTS.md  README.md  inspect_msc.py  pyproject.toml
src/msc_mcp/: __init__.py  __main__.py  server.py
tests/: test_main.py  test_server.py
